fix: adjust text size for better readability on mobile devices

--- a/rg_web/src/styles.scss
+++ b/rg_web/src/styles.scss
@@ -10,6 +10,8 @@ html {
   font-family: sans-serif;
   box-sizing: border-box;
   scrollbar-gutter: stable;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 app-header,
